# fox-mysql

./: .gitignore  BUGFIX_REPORT.md  BUGFIX_SUMMARY.md  BUG_LVALUE_STRING.md  BUG_STRING_LITERAL.md  CMakeLists.txt  NEXT_STEPS.md  README.md  STATUS.txt  USAGE_PREPARED_POOL.md  spec-prepare.md  spec.md  sped-pool.md  test_prepared_debug.cpp
cmake/: fox-mysqlConfig.cmake.in  yxmysqlConfig.cmake.in
docs/: connection_pool.md
examples/: CMakeLists.txt  basic_example.cpp  pool_example.cpp
include/fox-mysql/: connection.h  connection_prepared.hpp  exception.h  fox-mysql.h  pool.h  result_set.h  types.h
include/yx/mysql/: connection.h  result_set.h  yxmysql.h
include/yxmysql/: connection.h  connection_prepared.hpp  exception.h  pool.h  result_set.h  types.h  yxmysql.h
specs/: spec-pool.md  spec-prepare.md  spec.md
src/: connection.cpp  pool.cpp  result_set.cpp
tests/: CMakeLists.txt  buffer_refactor_test.cpp  compile_test.cpp  dynamic_param_test.cpp  pool_compile_test.cpp  pool_stale_connection_test.cpp  prepared_test.cpp  scalar_param_test.cpp  stmt_buffer_regression_test.cpp
