add_executable(compile_test compile_test.cpp)
target_link_libraries(compile_test fox-mysql)

add_executable(pool_compile_test pool_compile_test.cpp)
target_link_libraries(pool_compile_test fox-mysql)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(pool_compile_test pthread)
endif()

add_executable(prepared_test prepared_test.cpp)
target_link_libraries(prepared_test fox-mysql)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(prepared_test pthread)
endif()

add_executable(buffer_refactor_test buffer_refactor_test.cpp)
target_link_libraries(buffer_refactor_test fox-mysql)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(buffer_refactor_test pthread)
endif()

add_executable(scalar_param_test scalar_param_test.cpp)
target_link_libraries(scalar_param_test fox-mysql)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(scalar_param_test pthread)
endif()